# actix-lab

./: .env  .gitignore  Cargo.toml  README.md
certificate/: cert.pem  key.pem
src/: main.rs
src/db/: db_home.rs  mod.rs
src/error/: handler.rs  mod.rs
src/page/: index.rs  login.rs  mod.rs
src/page/error/: mod.rs
static/css/: style.css
templates/: 404.html  500.html  base.html  base.html.tera  index.html  login.html
