[package]
name = "actix-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4", features=["rustls"]}
actix-web-lab = "0.18"
actix-files = "0.6"
env_logger = "0.10"
log = "0.4"
tera = "1"
lazy_static = "1.4.0"
thiserror = "1"
rustls = "0.20.7"
rustls-pemfile = "1"
serde={version="1", features=["derive"]}
