[package]
name = "actix-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4", features=["rustls"]}
actix-web-lab = "0.18"
actix-files = "0.6"
env_logger = "0.10"
dotenvy = "0.15.6"
log = "0.4"
tera = "1"
lazy_static = "1.4.0"
thiserror = "1"
r2d2 = "0.8.10"
# in example from actix it's stated that 0.21 blocked.
r2d2_sqlite = "0.20"
rusqlite = "0.27" # 0.28.0 blocked on sqlx sqlite update
rustls = "0.20.7"
rustls-pemfile = "1"
serde={version="1", features=["derive"]}
actix-identity="0.5"
actix-session={version="0.7", features=["cookie-session"]}
anyhow="1"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing="0.1.37"
tracing-subscriber={version="0.3.16", features=["env-filter", "ansi"]}
tracing-appender="0.2.2"
tracing-log="0.1.3"